--- a/application.json
+++ b/application.json
@@ -15,6 +15,10 @@
     {
       "id": "Gsheetsallcrud",
       "isDefault": true
+    },
+    {
+      "id": "Oauth",
+      "isDefault": false
     }
   ],
   "unpublishedApplicationDetail": {
