--- a/application.json
+++ b/application.json
@@ -33,7 +33,15 @@
       "isDefault": false
     },
     {
-      "id": "Sheet1",
+      "id": "1",
+      "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
+    },
+    {
+      "id": "DISTRICT",
       "isDefault": false
     }
   ],
